--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,7 @@ html,
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --radius: 56px;
   }
   .dark {
     --background: 240 10% 3.9%;
